Project 2 deployfile added

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #f4f4f9;
     color: #333;
     padding: 20px;
-    background-image: url('https://img.freepik.com/free-photo/blurred-bokeh-style-lights-evening_53876-18300.jpg?t=st=1740432664~exp=1740436264~hmac=d0a2262ad4bbd9eeac4719d27f0b8f1a4b4c636f1ee4a479a7b9264c1362c9ff&w=2000');
+    background-image: url('https://as2.ftcdn.net/v2/jpg/11/79/45/13/1000_F_1179451307_qMpGi1seiw5IsFuTZQd0rQM8uKoR29Zz.jpg');
   background-size: cover;  /* Optional: Ensures the image covers the whole screen */
   background-position: center;  /* Optional: Centers the image */
   background-repeat: no-repeat; 
